# program-grading-system

./: .dockerignore  .gitignore  .tool-versions  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bun.lockb  compose.yaml  package.json  program-grading-system.code-workspace  renovate.json  shuiro.code-workspace  wip.ts
.devcontainer/: devcontainer.json
.github/workflows/: backend-ci.yml  cli-ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-language-website.yml  devcontainer-ci.yml  frontend-ci.yml  language-ci.yml  language-website-ci.yml  runtime-ci.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  bin  build.ts  eslint.config.js  litestream.yml  package.json  prettier.config.js  run.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts
backend/designdoc/: docker.md  tests-with-database.md
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20241021131830_init/: migration.sql
backend/prisma/migrations/20241104023951_set_unique_fields/: migration.sql
backend/prisma/migrations/20241115030715_add_unique_keys/: migration.sql
backend/prisma/migrations/20241115034618_add_unique_key_in_language/: migration.sql
backend/prisma/migrations/20241115045434_set_unique_keys/: migration.sql
backend/prisma/migrations/20241201042718_set_auth/: migration.sql
backend/src/: api.rs  app.test.ts  app.ts  components.rs  index.ts  lib.rs  main.rs
backend/src/api/: paths.rs  problems.rs  submissions.rs
backend/src/api/components/: schemas.rs  schemas.ts
backend/src/api/components/schemas/: auth.ts
backend/src/api/paths/: auth.ts  generate-test-case.ts  problem.test.ts  problem.ts  problems.rs  problems.ts  run-code.ts  submissions.rs  submissions.test.ts  submissions.ts  submit.ts
backend/src/db/: index.ts  test-helpers.ts
backend/src/services/dsl/: evaluate-call-nodes.ts  faker-wrappers.ts  index.ts  parser-dsl.ts  types.ts
backend/src/services/program/: index.ts  run.test.ts  run.ts  test.test.ts  test.ts
backend/src/services/program/languages/: index.ts
backend/src/services/program/languages/python/: index.ts  run.test.ts  run.ts
cli/: ARCHITECTURE.md  Cargo.toml
cli/designdoc/: init.md
cli/src/: main.rs
cli/src/api/: client.rs
cli/src/commands/: list.rs  mod.rs  show.rs  submit.rs
cli/src/config/: settings.rs
cli/src/models/: mod.rs  problem.rs  submission.rs
frontend/: .gitignore  ARCHITECTURE.md  README.md  bun.lockb  components.json  eslint.config.js  package.json  prettier.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: mockServiceWorker.js
frontend/src/: App.tsx  main.tsx  route-tree.gen.ts  routeTree.gen.ts  vite-env.d.ts
frontend/src/app/: page.tsx
frontend/src/components/: passkey-auth.tsx
frontend/src/components/layout/: base-layout.tsx  nav-bar.tsx  sidebar.tsx
frontend/src/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/features/markdown-editor/: index.ts
frontend/src/hooks/use-controlled-state/: index.ts  use-controlled-state.test.tsx  use-controlled-state.tsx
frontend/src/hooks/use-mobile/: index.ts  use-mobile.tsx
frontend/src/hooks/use-persisted-state/: index.ts  use-persisted-state.ts
frontend/src/lib/: api.ts
frontend/src/lib/api/: client.ts  index.ts
frontend/src/mocks/: handlers.ts
frontend/src/routes/: __root.tsx  _student.tsx  _teacher.tsx  index.lazy.tsx
frontend/src/styles/: global.css
language/: .editorconfig  .gitignore  Cargo.toml  Makefile.toml
language/crates/ast/: Cargo.toml
language/crates/ast/src/: lib.rs
language/crates/code-generator/: Cargo.toml
language/crates/code-generator/examples/: print_wat.rs
language/crates/code-generator/src/: lib.rs  template.wat
language/crates/parser/: Cargo.toml
language/crates/parser/src/: lib.rs
language/crates/tokenizer/: Cargo.toml
language/crates/tokenizer/src/: lib.rs  position.rs  source.rs  token.rs  tokenizer.rs
language/crates/tools/: Cargo.toml
language/crates/tools/src/: bindings.rs  lib.rs
language/crates/tools/wit/: world.wit
language/docs/: spec.md
language/src/: main.rs  tokenize.rs
language/src/parse/: ast.rs  parser.rs  syntax.bnf
language/src/tokenize/: position.rs  source.rs  token.rs  tokenizer.rs
language/website/: README.md  astro.config.ts  eslint.config.js  justd.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
language/website/src/: tailwind.css
language/website/src/components/: theme-provider.tsx
language/website/src/components/ui/: button.tsx  dialog.tsx  dropdown.tsx  index.ts  keyboard.tsx  menu.tsx  popover.tsx  primitive.tsx  tabs.tsx
language/website/src/content/: config.ts
language/website/src/content/docs/: index.mdx
language/website/src/content/docs/guides/: introduction.md
language/website/src/features/playground/components/: action-bar.tsx  editor.tsx  output.tsx  playground.tsx
language/website/src/features/playground/contexts/: playground-context-provider.tsx  playground-context.ts
language/website/src/features/playground/hooks/: use-playground.ts
language/website/src/features/playground/lib/wasm/: index.ts  run.ts  tools.wasm
language/website/src/features/playground/lib/wasm/preview2-shim/: README.md  cli.js  clocks.js  filesystem.js  http.js  index.js  io.js  random.js  sockets.js
language/website/src/pages/playground/: index.astro
runtime/: .gitignore
(+124 files in other folders)
