[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
hyper = { version = "1.4.1", features = ["full"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
utoipa = { version = "5.0.0-rc.0", features = ["axum_extras", "debug", "chrono"] }
utoipa-scalar = { version = "0.2.0-rc.0", features = ["axum"] }
