[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shuiro"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
config = "0.14.1"
directories = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
