[package]
name = "language"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
indoc = { workspace = true }

[dependencies]
parser = { workspace = true }
tokenizer = { workspace = true }
code-generator = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }

[workspace]
members = [
  "crates/ast",
  "crates/code-generator",
  "crates/parser",
  "crates/tokenizer",
  "crates/tools",
]

[workspace.dependencies]
anyhow = "1.0.94"
ast = { path = "crates/ast" }
code-generator = { path = "crates/code-generator" }
parser = { path = "crates/parser" }
pretty_assertions = "1.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
tokenizer = { path = "crates/tokenizer" }
indoc = "2.0.5"
wast = "222.0.0"
