[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
parser = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizer = { workspace = true }
code-generator = { workspace = true }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:tools"

[package.metadata.component.dependencies]
